refactor production env

--- a/app/views/posts/new.jade
+++ b/app/views/posts/new.jade
@@ -135,8 +135,7 @@ block content
             div.modal-dialog.width70percent
                 div.modal-content
                     div.modal-header
-                        button(type='button',class='close',data-dismiss='modal',aria-hidden='true')
-                            &times;
+                        button(type='button',class='close',data-dismiss='modal',aria-hidden='true') &times;
                         h5 编辑器使用说明
 
                     div.modal-body
