refactor to node0.10.26 and express first step success

--- a/app/views/posts/new.jade
+++ b/app/views/posts/new.jade
@@ -16,7 +16,7 @@ block content
                                 label(for='title') 标题：
                         div.row
                             div.col-md-6
-                                input(name='title',type='text',class='form-control',placeholder='最多40字符',type='text',maxlength='40',required,data-validation-maxlength-message='标题不能超过40个字符！')
+                                input(name='title',type='text',class='form-control',placeholder='最多40字符',maxlength='40',required,data-validation-maxlength-message='标题不能超过40个字符！')
                     div.form-group
                         div.row
                             div.col-md-6
