dev test node0.10.28

--- a/app/views/posts/new.jade
+++ b/app/views/posts/new.jade
@@ -209,4 +209,4 @@ block content
                     div.modal-footer
                         p
                             powered by github makedown
-        script(data-main='/javascripts/app/post-article',src='/javascripts/require.js?v=#{appVersion}')
+        script(data-main='/build/app/post-article',src='/javascripts/require.js?v=#{appVersion}')
