--- a/app/views/users/login.jade
+++ b/app/views/users/login.jade
@@ -33,5 +33,5 @@ block content
                         | &nbsp;&nbsp;&nbsp;&nbsp;
                         a(href='/reg') 注册
 
-        script(data-main='/javascripts/app/user',src='/javascripts/require.js?v=#{appVersion}')
+        script(data-main='/build/app/user',src='/javascripts/require.js?v=#{appVersion}')
 
