--- a/app/views/users/forgot.jade
+++ b/app/views/users/forgot.jade
@@ -21,6 +21,6 @@ block content
                             div.form-group
                                 div.col-md-4.col-md-offset-2
                                     button(class='btn btn-primary', type='submit') 提交
-        script(data-main='/build/app/forgot',src='/javascripts/require.js?v=#{appVersion}')
+        script(data-main='#{jsPath}/forgot',src='/javascripts/require.js?v=#{appVersion}')
 
 
