--- a/app/views/users/reg.jade
+++ b/app/views/users/reg.jade
@@ -38,4 +38,4 @@ block content
                     div.form-group
                         div.col-md-4.col-md-offset-2
                             button(class='btn btn-primary', type='submit') 提交
-        script(data-main='/build/app/reg',src='/javascripts/require.js?v=#{appVersion}')
+        script(data-main='#{jsPath}/reg',src='/javascripts/require.js?v=#{appVersion}')
