--- a/app/views/users/show.jade
+++ b/app/views/users/show.jade
@@ -32,6 +32,6 @@ block content
                            td 注册时间
                            td #{user.regTimeStr}
 
-        script(data-main='/build/app/user-show',src='/javascripts/require.js?v=#{appVersion}')
+        script(data-main='#{jsPath}/user-show',src='/javascripts/require.js?v=#{appVersion}')
 
 
