--- a/app/views/posts/show.jade
+++ b/app/views/posts/show.jade
@@ -88,4 +88,4 @@ block content
                     hr
 
 
-        script(data-main='/build/app/post-show',src='/javascripts/require.js?v=#{appVersion}')
+        script(data-main='#{jsPath}/post-show',src='/javascripts/require.js?v=#{appVersion}')
