--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -73,4 +73,7 @@ block content
                                             img(class='img-circle img-thumbnail img-responsive tini-face',src='#{user.thumbnails}',alt='#{user.name}')
 
                                     | &nbsp;
-        script(data-main='#{jsPath}/home',src='/javascripts/require.js?v=#{appVersion}')
+        if 'production' === env
+            script(data-main='#{jsPath}/home',src='/javascripts/require.js?v=#{appVersion}')
+        else
+            script(src='#{jsPath}/home.js')
