--- a/app/views/layouts/_css.jade
+++ b/app/views/layouts/_css.jade
@@ -1,6 +1,8 @@
 
   
 link(rel='stylesheet', href='/stylesheets/application-all-min.css?v=#{appVersion}')
+unless 'production' === env
+  script(data-main='/javascripts/requirejs-config.js',src='/javascripts/require.js')
 
 
 
