--- a/app/views/users/edit.jade
+++ b/app/views/users/edit.jade
@@ -118,4 +118,7 @@ block content
 
 
 
-    script(data-main='#{jsPath}/user-edit.js',src='/javascripts/require.js?v=#{appVersion}')
+    if 'production' === env
+        script(data-main='#{jsPath}/user-edit',src='/javascripts/require.js?v=#{appVersion}')
+    else
+        script(src='#{jsPath}/user-edit.js')
