--- a/app/views/users/login.jade
+++ b/app/views/users/login.jade
@@ -33,5 +33,9 @@ block content
                         | &nbsp;&nbsp;&nbsp;&nbsp;
                         a(href='/reg') 注册
 
-        script(data-main='#{jsPath}/user',src='/javascripts/require.js?v=#{appVersion}')
+        if 'production' === env
+            script(data-main='#{jsPath}/user',src='/javascripts/require.js?v=#{appVersion}')
+        else
+            script(src='#{jsPath}/user.js')
+
 
