--- a/app/views/users/reg.jade
+++ b/app/views/users/reg.jade
@@ -38,4 +38,10 @@ block content
                     div.form-group
                         div.col-md-4.col-md-offset-2
                             button(class='btn btn-primary', type='submit') 提交
-        script(data-main='#{jsPath}/reg',src='/javascripts/require.js?v=#{appVersion}')
+
+
+        if 'production' === env
+            script(data-main='#{jsPath}/reg',src='/javascripts/require.js?v=#{appVersion}')
+        else
+            script(src='#{jsPath}/reg.js')
+
