--- a/app/views/home/post-content-bone.jade
+++ b/app/views/home/post-content-bone.jade
@@ -65,7 +65,7 @@ script(type="text/template",id="up-down-template")
 script(type="text/template",id="pager-template")
     div.row
         div.col-md-12
-            div(class='pagination pagination-right pull-right')
+            ul.pagination
             
 
 
