--- a/app/views/posts/new.jade
+++ b/app/views/posts/new.jade
@@ -211,6 +211,6 @@ block content
                             powered by github makedown
        
         if 'production' === env
-            script(data-main='#{jsPath}/post-article',src='/javascripts/require.js?v=#{appVersion}')
+            script(data-main='#{jsPath}/post-article',src='#{jsPath}/require.js?v=#{appVersion}')
         else
             script(src='#{jsPath}/post-article.js')
