--- a/app/views/review/show.jade
+++ b/app/views/review/show.jade
@@ -52,6 +52,6 @@ block content
 
         script(data-main='#{jsPath}/review',src='/javascripts/require.js?v=#{appVersion}')
         if 'production' === env
-            script(data-main='#{jsPath}/review',src='/javascripts/require.js?v=#{appVersion}')
+            script(data-main='#{jsPath}/review',src='#{jsPath}/require.js?v=#{appVersion}')
         else
             script(src='#{jsPath}/review.js')
