--- a/app/views/tags/new.jade
+++ b/app/views/tags/new.jade
@@ -17,4 +17,4 @@ block content
                     div.form-group
                         button(type='submit', class='btn btn-success') 添加
 
-        script(data-main='#{jsPath}/post-article',src='/javascripts/require.js?v=#{appVersion}')
+        script(data-main='#{jsPath}/post-article',src='#{jsPath}/require.js?v=#{appVersion}')
