--- a/app/views/users/reg.jade
+++ b/app/views/users/reg.jade
@@ -41,7 +41,7 @@ block content
 
 
         if 'production' === env
-            script(data-main='#{jsPath}/reg',src='/javascripts/require.js?v=#{appVersion}')
+            script(data-main='#{jsPath}/reg',src='#{jsPath}/require.js?v=#{appVersion}')
         else
             script(src='#{jsPath}/reg.js')
 
