--- a/app/views/tags/edit.jade
+++ b/app/views/tags/edit.jade
@@ -30,4 +30,4 @@ block content
 
                     div.modal-footer
                         p powered by github makedown
-        script(data-main='#{jsPath}/post-article',src='/javascripts/require.js?v=#{appVersion}')
+        script(data-main='#{jsPath}/post-article',src='#{jsPath}/require.js?v=#{appVersion}')
