--- a/app/views/tags/index.jade
+++ b/app/views/tags/index.jade
@@ -58,6 +58,6 @@ block content
                         a(id='confirm-del-btn',href='#',data-post-id='',class='btn btn-danger') 确定
 
         if 'production' === env
-            script(data-main='#{jsPath}/tag',src='/javascripts/require.js?v=#{appVersion}')
+            script(data-main='#{jsPath}/tag',src='#{jsPath}/require.js?v=#{appVersion}')
         else
             script(src='#{jsPath}/tag.js')
