--- a/app/views/users/edit.jade
+++ b/app/views/users/edit.jade
@@ -119,6 +119,6 @@ block content
 
 
     if 'production' === env
-        script(data-main='#{jsPath}/user-edit',src='/javascripts/require.js?v=#{appVersion}')
+        script(data-main='#{jsPath}/user-edit',src='#{jsPath}/require.js?v=#{appVersion}')
     else
         script(src='#{jsPath}/user-edit.js')
