--- a/app/views/users/show.jade
+++ b/app/views/users/show.jade
@@ -33,7 +33,7 @@ block content
                            td #{user.regTimeStr}
 
         if 'production' === env
-            script(data-main='#{jsPath}/user-show',src='/javascripts/require.js?v=#{appVersion}')
+            script(data-main='#{jsPath}/user-show',src='#{jsPath}/require.js?v=#{appVersion}')
         else
             script(src='#{jsPath}/user-show.js')
 
